<?php

namespace App\Domain\Project\ValueObject;

use Ramsey\Uuid\Uuid;

final class ProjectId
{
    private string $value;

    private function __construct(string $value)
    {
        $this->value = $value;
    }

    public static function generate(): self
    {
        return new self(Uuid::uuid4()->toString());
    }

    public function value(): string
    {
        return $this->value;
    }
}
